// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawWall draws 1`] = `
<canvas
  data-snapshot-image="68ffbb31e8937728e2ad5ca452fd4fc50532819d37a9430081090091af4fce3b06498910c2a5b6f061e7012fa2979524f81a76cae2a945fcc032a5b757dec177"
  height="500"
  width="800"
/>
`;

exports[`DrawWall draws_info 1`] = `
<canvas
  data-snapshot-image="082d75ead0966ac6c8cd1384b98e63f5c3ebd3b581a5033bd4901ee4d513eb367a1c8f84be1caf8b018c352bfa3ceb7ce3fea9cd6fde415d46b0cfb8fc3a5b03"
  height="500"
  width="800"
/>
`;
